moving file to .swig

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -464,7 +464,7 @@ if(SWIG_FOUND)
 			if(PYTHONLIBS_FOUND AND PYTHONINTERP_FOUND)
 				unset(CMAKE_SWIG_FLAGS)
 				include_directories(${PYTHON_INCLUDE_PATH})
-				swig_add_module(psmove python bindings/swig/psmove.i)
+				swig_add_module(psmove python bindings/swig/psmove.swig)
 				swig_link_libraries(psmove psmoveapi_static ${PYTHON_LIBRARIES})
 				if (PSMOVE_BUILD_TRACKER)
 					swig_link_libraries(psmove psmoveapi_tracker_static)
@@ -504,7 +504,7 @@ if(SWIG_FOUND)
 
 				set(CMAKE_SWIG_FLAGS -package ${PSMOVEAPI_JAVA_PKG})
 				include_directories(${JNI_INCLUDE_DIRS})
-				swig_add_module(psmove_java java bindings/swig/psmove.i)
+				swig_add_module(psmove_java java bindings/swig/psmove.swig)
 				swig_link_libraries(psmove_java psmoveapi_static ${JNI_LIBRARIES})
 				if (PSMOVE_BUILD_TRACKER)
 					swig_link_libraries(psmove_java psmoveapi_tracker_static)
@@ -588,7 +588,7 @@ if(SWIG_FOUND)
         set(PSMOVEAPI_CSHARP_NS "io.thp.psmove")
 
         set(CMAKE_SWIG_FLAGS -namespace ${PSMOVEAPI_CSHARP_NS})
-        swig_add_module(psmoveapi_csharp csharp bindings/swig/psmove.i)
+        swig_add_module(psmoveapi_csharp csharp bindings/swig/psmove.swig)
         swig_link_libraries(psmoveapi_csharp psmoveapi_static)
         if (PSMOVE_BUILD_TRACKER)
             swig_link_libraries(psmoveapi_csharp psmoveapi_tracker_static)
